# AFHManagerGrokv2

./: .replit  README.md  app.py  database.db  forms.py  medication_notifications.py  medications_data.py  models.py  pyproject.toml
attached_assets/: Pasted-Creating-database-at-afh-db-Database-created-Syncing-medications-from-ELDERLY-MEDS-Medicat-1752350410740_1752350410741.txt  Pasted-Creating-database-at-afh-db-Database-created-Traceback-most-recent-call-last-File-home-1752084554955_1752084554955.txt
static/css/: style.css
static/js/: autocomplete.js
templates/: add_resident.html  add_user.html  admin_tools.html  all_incidents.html  audit_logs.html  base.html  daily_log_wizard.html  daily_logs.html  daily_logs_content.html  daily_logs_partial.html  delete_resident.html  documents.html  documents_content.html  documents_partial.html  edit_resident_partial.html  home.html  incidents.html  incidents_partial.html  login.html  medication_form.html  medications.html  medications_content.html  medications_partial.html  report.html  resident_profile.html  users.html
