[tool.poetry]
name = "afh-management"
version = "0.1.0"
description = "Adult Family Home Management System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.3.3"
flask-login = "0.6.3"
werkzeug = "3.0.1"
reportlab = "4.0.7"
flask-mail = "0.9.1"
flask-wtf = "1.2.1"
cryptography = "^43.0.1"
flask-sqlalchemy = "^3.0.0"
wtforms = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"